@@ -1,8 +1,10 @@
 DIST rspec-1.1.11.gem 269824 RMD160 40ec791e226c9b50f733983cfd19774feac7ab5f SHA1 075fa05b9f864a1a081632445827f287102a8534 SHA256 0169029ec90c77be5db6a65b4af17b37b01308a7cb476633b237e0849caefdc9
 DIST rspec-1.1.12.gem 274944 RMD160 e910463e38093f946a9c670d9b52b8c0ce4b132f SHA1 5e39b64d8b2a7268c6414598753cf0c8daeac8c9 SHA256 7d5ac61a6fab572481d4c742577b4dbc4e9b385d5b9240aa7f2dcd4957c97fc8
 DIST rspec-1.2.0.gem 187904 RMD160 bfa533b644610d0aa28c0f04747684ea68f40ce3 SHA1 c5fa6d06a87fc082ca988688aff45ee61529abe0 SHA256 970b2ffca4283d8d34c914f25dedd6cdb2d9b36d36c4d0f6dd99571ffa5f854a
+DIST rspec-1.2.2.gem 193024 RMD160 5c34544d8bc9116ca718642a46d1666acfbade27 SHA1 658b0721324c64cff0ce7333142c3898ea17e6b5 SHA256 dfc12897fde86184660f5c8680f0913ed8585a0fc588246d5278ff564aef35c5
 EBUILD rspec-1.1.11.ebuild 489 RMD160 059f6cae375e31071e76d3144948a7b8980e0d3a SHA1 ecfeb779490de678081e75ab8c1d39e7592b63fa SHA256 fadeecb4eda4929b74448cda6205693c7f8e424ceb867d0e62ad9d87726545f4
 EBUILD rspec-1.1.12.ebuild 494 RMD160 803c016732594d776bbe94a6b96952648139533c SHA1 4457c3f4a32a786e2e8797fe0d251b542c1121f4 SHA256 6777de6413dda985f0636dd8329e95eb5d23fca353551c716d1a7de45d9c7dba
 EBUILD rspec-1.2.0.ebuild 493 RMD160 948717e743e94bf5fb649e8042999401d9f4e733 SHA1 3788769b0501d2f83a7fa80ea44dda6a44dfd8d3 SHA256 7c2d9d06b6d4d9a862d91541790cb7a11fede01862c4bd29fed63e40922753d5
-MISC ChangeLog 5906 RMD160 dc9a11e385b63a3019d7efb24afba1d5224a0da4 SHA1 56d6dcaf8b3f0a95be3b97461a4cf18647448db1 SHA256 f55e32ef63f007726c76765d05b1cca91ad5d50ac72b0778d92d9ae1c7d5a5dc
+EBUILD rspec-1.2.2.ebuild 512 RMD160 f7eb61b21a6d7a212cc1269f4da4010601389ce1 SHA1 4201f7ddf53c94807db81ebcd27017eeb0408085 SHA256 78f17af4d651c86ee3f522df64cc5ad7d48bc1f773e876a2bbf44bbb9fee09f3
+MISC ChangeLog 6047 RMD160 34b67f310a35ffeca92ac442c4347c7c8c738473 SHA1 641c2abb572f393bff84b4a6bc9bb82090a99ce8 SHA256 2584760c8fb92745941d400b68fbbe96063528eb223ea6c73c22ddd22489e29b
 MISC metadata.xml 158 RMD160 097f8145a9994f98be4971b43b23b9e5e8bccb66 SHA1 7ac646714b1ab83fda98f3ccdd8b48a31c148b27 SHA256 70b396ab3c7a63a81cb895b7728bd9eccdc9770afdb9919f2c54694b685f7032
